# Opening-Trainer-Corpus-Builder

./: CMakeLists.txt  README.md
include/otcb/: aggregation.hpp  behavioral_extract.hpp  behavioral_profile_builder.hpp  build_plan.hpp  bundle_writer.hpp  chess_board.hpp  chess_types.hpp  cli.hpp  config.hpp  game_envelope.hpp  header_scan.hpp  manifest.hpp  opening_extraction.hpp  position_key.hpp  predecessor_master.hpp  preflight.hpp  progress.hpp  range_plan.hpp  rating_filter.hpp  san_replay.hpp  san_tokenizer.hpp  source_boundaries.hpp  sqlite_writer.hpp  timing_conditioned_bundle_builder.hpp
src/: aggregation.cpp  behavioral_extract.cpp  behavioral_profile_builder.cpp  build_behavioral_profiles_main.cpp  build_behavioral_training_extract_main.cpp  build_plan.cpp  build_timing_conditioned_corpus_bundle_main.cpp  bundle_writer.cpp  chess_board.cpp  chess_types.cpp  cli.cpp  config.cpp  game_envelope.cpp  header_scan.cpp  inspect_compact_payload_main.cpp  main.cpp  manifest.cpp  opening_extraction.cpp  position_key.cpp  predecessor_master.cpp  preflight.cpp  progress.cpp  range_plan.cpp  rating_filter.cpp  san_replay.cpp  san_tokenizer.cpp  source_boundaries.cpp  sqlite_writer.cpp  timing_conditioned_bundle_builder.cpp
tests/: fixtures_predecessor_convergent.pgn  fixtures_time_control_filtering.pgn  fixtures_timed_elo_ranges.pgn  fixtures_timed_small.pgn  fixtures_tiny.pgn  validate_behavioral_extract.py  validate_behavioral_profiles.py  validate_compact_payload.py  validate_jsonl_payload.py  validate_predecessor_master.py  validate_predecessor_payload.py  validate_sqlite_payload.py  validate_time_control_filtering.py  validate_timing_conditioned_bundle.py
